test/conformance/kuttl/verifyImages/clusterpolicy/standard/keyed-secret/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: secret-in-keys
status:
  ready: true
