test/conformance/kuttl/verifyImages/clusterpolicy/standard/keyed-secret/02-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-secret-pod
  namespace: test-verify-images
